fix(advantages): less aggressive z-index

--- a/app/styles/blocks/advantages.styl
+++ b/app/styles/blocks/advantages.styl
@@ -11,7 +11,7 @@
 		position absolute
 		top 0
 		left 0
-		z-index 100
+		z-index 1
 		display block
 		width 374px
 		height 210px
@@ -22,7 +22,7 @@
 		position absolute
 		left 0
 		bottom 0
-		z-index 100
+		z-index 1
 		display block
 		width 374px
 		height 230px
